tests/sumo/errors/routes/first_edge_disallowed/errors.sumo
Error: Vehicle '0' has no valid route. Edge 'beg' prohibits.
Quitting (on error).
